<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/menu"
        android:layout_width="290dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:alpha="1"
        android:animateLayoutChanges="true"
        android:background="@android:color/background_light"
        android:backgroundTint="@android:color/background_light"
        android:backgroundTintMode="src_over"
        android:elevation="100dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.901"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

            <TableRow
                android:id="@+id/act_purpose"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="onClickListenner">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/act_purpose_descr"
                    app:srcCompat="@mipmap/ajout" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/add_act_text" />
            </TableRow>

            <TableRow
                android:id="@+id/goProfil"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="onClickListenner">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/descr_go_profil"
                    app:srcCompat="@mipmap/perso" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/profil_text" />

            </TableRow>

            <TableRow
                android:layout_height="10dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bottom_border"
                android:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bottom_border" />
            </TableRow>

            <TableRow
                android:id="@+id/go_param"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="onClickListenner">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="8dp"
                    app:srcCompat="@mipmap/param" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/param_text" />
            </TableRow>

            <TableRow
                android:id="@+id/go_assist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="onClickListenner">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="8dp"
                    app:srcCompat="@mipmap/cloche" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/assist_text" />

            </TableRow>

            <TableRow
                android:id="@+id/deco"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="onClickOnMenu">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/descr_go_param"
                    app:srcCompat="@mipmap/deco" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/deco_text" />

            </TableRow>

        </TableLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="174dp"
            android:background="@android:color/darker_gray">

            <ImageButton
                android:id="@+id/return_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/descr_return_menu"
                android:onClick="onClickOnMenu"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/fleche_d" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="114dp"
                android:layout_height="105dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/descr_pict_profil"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/tete" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/title_main"
        android:layout_width="276dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/_main_title"
        android:textAlignment="center"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/_icon_menu"
        android:layout_width="49dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/descr_icon_menu"
        android:onClick="onClickOnMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/menu" />
</android.support.constraint.ConstraintLayout>